  (ex: cobbler and koan from FC6extras, w/o games).
- More consistant naming on imports, regardless of data source.
- Teach cobbler to remove .olddata dirs, which can happen if createrepo crashes or is killed mid-process
- Default yum_core_repos_from_server to 0 
- Implemented triggers for add/delete commands

* Thu Apr 05 2007 - 0.4.6
- Bind cobbler_syslogd to all addresses
- Store repos as list, not string
- Fix traceback in cobbler_sync with older configurations (pre-kickstart tracking)
- Make cobbler import feature better understand older RHEL and in-between builds of Fedora.
- Make cobbler repo add/reposync understand http://, ftp://, and some limited support for RHN.
- Add settings parameter to toggle core repo mirror behavior on/off.
- Manpage cleanup.

* Fri Mar 23 2007 - 0.4.5
- Removed legacy --virt-name parameter, requires koan upgrade to 0.2.8

* Fri Mar 23 2007 - 0.4.4
- Generate PXE configuration files from templates in /etc/cobbler to be more customizable
- Fix bug with wrong kickstart metadata being used for import
- Fix bug with argument parsing for --repos
- Much cleaner distro/profile names with --import
- For import, the "tree" parameter is now attached to the distro, not the profile
- Add "links" directory in webdir for symlinking to full kickstart tree paths.
- Misc tweaks to shorten kernel parameter length
- Giving invalid arguments to "report" will show an error message
- Distros, Profiles, and System names are now case insensitive.

* Wed Feb 28 2007 - 0.4.3
- Added netboot_enabled option for systems to control install loops in programmatic context.
- Disabling anchors in YAML serialization (which make files harder to edit)
- Fix bug in ksmeta argument processing, takes whitespace again, not commas
- Fix bug in old-style deserialization with str and int concatenation

* Mon Feb 19 2007 - 0.4.2
- Fix bug in "cobbler system remove"

* Mon Feb 19 2007 - 0.4.1
- Bundle menu.c32 for older distros