@@ -1,7 +1,7 @@
 include loaders/COPYING_ELILO
 include loaders/elilo-3.6-ia64.efi
 include loaders/menu.c32
-include templates/cobbler.conf
+include config/cobbler.conf
 include templates/dhcp.template
 include templates/pxeprofile.template
 include templates/pxedefault.template
@@ -13,6 +13,7 @@ include kickstarts/kickstart_fc6_domU.ks
 include kickstarts/default.ks
 include docs/cobbler.1.gz
 include COPYING AUTHORS README CHANGELOG NEWS
-include templates/rsync.exclude
+include config/rsync.exclude
 include scripts/watcher.py
-include scripts/cobblersyslogd
+include scripts/cobblerd
+include config/cobblerd
