@@ -1,11 +1,11 @@
 # This configuration file allows cobbler data
 # to be accessed over HTTP.
 
-AliasMatch ^/cobbler(/.*)?$ "/cobbler_webdir$1"
-AliasMatch ^/cobbler_track(/.*)?$ "/cobbler_webdir$1"
-AliasMatch ^/cblr(/.*)?$ "/cobbler_webdir$1"
+AliasMatch ^/cblr(.*)?$ "/var/www/cobbler$1"
+AliasMatch ^/cobbler_track(.*)?$ "/var/www/cobbler$1"
+AliasMatch ^/cobbler(.*)?$ "/var/www/cobbler$1"
 
-<Directory "/cobbler_webdir">
+<Directory "/var/www/cobbler">
     Options Indexes FollowSymLinks
     AllowOverride None
     Order allow,deny
