@@ -3,9 +3,8 @@
 # cobblersyslogd    Cobbler kickstart status monitor
 #
 # chkconfig: 345 99 99 
-# description:  This is a daemon which monitors and logs remote syslog traffic \
-#               from machines being provisioned from cobbler.  \
-#               See http://cobbler.et.redhat.com
+# description:  This is a daemon that provides remote cobbler info to koan
+#               clients and also logs installer syslog activitity. 
 #
 # processname: /usr/bin/cobbler_syslogd
 
@@ -18,7 +17,7 @@
 RETVAL=0
 
 start() {
-    echo -n $"Starting cobbler remote syslog monitor: "
+    echo -n $"Starting cobbler daemon: "
     if test -f /var/lock/subsys/cobblersyslogd ; then
         echo_failure
         echo
@@ -34,7 +33,7 @@ start() {
 
 
 stop() {
-    echo -n $"Stopping cobbler remote syslog monitor: "
+    echo -n $"Stopping cobbler daemon: "
     if ! test -f /var/lock/subsys/cobblersyslogd ; then
         echo_failure
         echo
@@ -50,7 +49,7 @@ stop() {
 
 mystatus() {
     if test -f /var/lock/subsys/cobblersyslogd ; then
-        echo "cobbbler_syslogd is running..."
+        echo "cobbblerd is running..."
         return 0
     fi
     echo "cobbler_syslogd is stopped"
