@@ -10,6 +10,7 @@ Cobbler CHANGELOG
 - Teach cobbler to remove .olddata dirs, which can happen if createrepo crashes or is killed mid-process
 - Default yum_core_repos_from_server to 0 
 - Implemented triggers for add/delete commands
+- BootAPI and Config object classes are now Borg patterned to prevent duplication of config info from the API.
 
 * Thu Apr 05 2007 - 0.4.6
 - Bind cobbler_syslogd to all addresses
